tests/compile-fail/integration__integration__type_check__bad_declaration.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: unexpected token `%`
   ┌─ <input>:28:11
   │
28 │       int %x;
   │           ^ unexpected token
   │
   = 
     Expected one of "(", ";", "anim", "case", "default", "ecli", "entry", "game", "image_source", "mapfile", "script" or IDENT


